# AReno

./: .gitignore  AGENTS.md  CODEMAP.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  agent.sh  benchmark.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  create-docker-image.yml  modal_math_algorithms.yml  modal_train.yml  publish-docs.yml  publish-image-aliyun-acr.yml  publish-pypi.yml  push_admit_audit.yml
areno/: __init__.py
areno/accel/: __init__.py  _extension.py  activations.py  conv.py  embedding.py  linear.py  moe.py  normalization.py  ops.py  router.py  routing.py  topk.py
areno/agent/: __init__.py  agent_loop.py  ops_knowledge.md  tools.py
areno/api/: __init__.py  advantages.py  agentic.py  algorithms.py  context.py  dashboard.py  data_utils.py  metrics.py  models.py  openai_chat.py  rewards.py  roles.py  tokenizer.py  tool_call_parser.py  trainer.py  trainer_config.py
areno/cli/: __init__.py  agent.py  auto_tune.py  dashboard.py  dashboard_registry.py  diagnostics.py  main.py  model_refs.py  serve.py  train.py
areno/engine/: api.py  config.py  inference.py  log.py  modeling.py  protocol.py  roles.py  training.py  worker.py
areno/models/: __init__.py  registry.py
ci/: modal_gsm8k_gspo.py
dashboard/: agent_context.py  agent_files.py  index.html  package.json  server.py  vite.config.js
docs/: conf.py  index.rst
tests/: test_agentic_cpu.py  test_agentic_shopping_example_cpu.py  test_agentic_tictactoe_example_cpu.py  test_algorithms_cpu.py  test_cli_diagnostics_cpu.py  test_cli_model_refs_cpu.py  test_coding_agent_loop_cpu.py  test_config_data_cpu.py  test_inference_scheduler_cpu.py  test_logprobs_cpu.py  test_losses_rewards_cpu.py  test_metrics_cpu.py  test_more_losses_cpu.py  test_protocol_cpu.py  test_registry_cpu.py  test_runtime_utils_cpu.py  test_sampling_cpu.py  test_serve_cli_cpu.py  test_sft_example_cpu.py  test_train_cli_config_cpu.py  test_trainer_api_cpu.py  test_trainer_dataset_utils_cpu.py
(+118 files in other folders)
