[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "areno"
version = "0.0.2"
description = "An easy-to-use, fast toolkit to scale up RL post-training on a single node."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Zibo He" },
  { name = "Le Su" },
]
keywords = [
  "llm",
  "reinforcement-learning",
  "rlvr",
  "agentic-rl",
  "post-training",
  "fine-tuning",
  "pytorch",
  "cuda",
  "self-hosted",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.6",
  "flash-linear-attention>=0.2",
  "safetensors>=0.4",
  "transformers>=4.56",
  "huggingface-hub>=0.25",
  "datasets>=3.3.0",
  "numpy",
  "tensorboard",
  "pydantic>=2",
  "fastapi>=0.110",
  "click>=8.1",
  "tqdm>=4.66",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
flash = [
  "flash-attn>=2.7",
]

[project.urls]
Homepage = "https://github.com/inclusionAI/AReno"
Repository = "https://github.com/inclusionAI/AReno"
Issues = "https://github.com/inclusionAI/AReno/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"areno/accel/kernels/*.py" = ["E741"]

[tool.ruff.lint.isort]
known-first-party = ["areno"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["areno"]
exclude = ["areno/accel/csrc"]

[tool.setuptools.packages.find]
where = ["."]
include = ["areno*"]

[project.scripts]
areno = "areno.cli.main:main"
